cabal-version:       2.2
name:                App
version:             0.1.0.0
build-type:          Simple

Flag Prod
    Description: Build for production
    Manual: True
    Default: False

common shared-extensions
  default-extensions:
    OverloadedStrings
    , NoImplicitPrelude
    , ImplicitParams
    , Rank2Types
    , DisambiguateRecordFields
    , NamedFieldPuns
    , DuplicateRecordFields
    , OverloadedLabels
    , FlexibleContexts
    , TypeSynonymInstances
    , FlexibleInstances
    , QuasiQuotes
    , TypeFamilies
    , PackageImports
    , ScopedTypeVariables
    , RecordWildCards
    , TypeApplications
    , DataKinds
    , InstanceSigs
    , DeriveGeneric
    , MultiParamTypeClasses
    , TypeOperators
    , DeriveDataTypeable
    , MultiWayIf
    , UndecidableInstances
    , BlockArguments
    , PartialTypeSignatures
    , LambdaCase
    , DefaultSignatures
    , EmptyDataDeriving
    , BangPatterns
    , BlockArguments
    , MultiWayIf
    , FunctionalDependencies
    , PartialTypeSignatures
    , StandaloneDeriving
    , DerivingVia

common shared-deps
  build-depends:
      base
    , classy-prelude
    , string-conversions
    , text
    , containers
    , attoparsec
    , unordered-containers
    , vector
    , transformers
    , blaze-html
    , postgresql-simple
    , scientific
    , bytestring
    , aeson
    , data-default
    , uuid
    , time
    , http-conduit
    , fast-logger
    , hspec
    , ip
    , basic-prelude
    , http-types
    , wai
    , ihp

common shared-opts
  default-language:    Haskell2010
  if flag(Prod)
    ghc-options:
        -O2
        -threaded
  else
    ghc-options:
        -O0
        -threaded


executable App
  import: shared-extensions
  import: shared-deps
  import: shared-opts

  main-is:             Main.hs
  hs-source-dirs:      . build Config

executable NightlyScrape
  import: shared-extensions
  import: shared-deps
  import: shared-opts

  main-is:             Application/Script/NightlyScrape.hs
  hs-source-dirs:      . build Config

executable JobRunner
  import: shared-extensions
  import: shared-deps
  import: shared-opts

  main-is:             Application/Script/JobRunner.hs
  hs-source-dirs:      . build Config
